added onClick listener to startNow button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:gravity="center"/>
 
         <Button
+            android:id="@+id/textShare"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_below="@id/custom_button"
@@ -40,6 +41,7 @@
             />
 
         <Button
+            android:id="@+id/mapSearch"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_below="@id/custom_button"
