--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cough"
-        android:layout_below="@id/fever"/>
+        android:layout_below="@id/fever" />
 
     <CheckBox
         android:id="@+id/fatigue"
@@ -58,7 +58,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Loss of taste/smell"
-        android:layout_below="@id/muscle_aches"/>
+        android:layout_toRightOf="@id/fever"
+        android:layout_marginLeft="40dp"
+        android:layout_alignBaseline="@+id/fever"/>
 
     <Button
         android:id="@+id/submit_button"
@@ -66,8 +68,7 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:layout_toRightOf="@+id/loss"
-        android:layout_alignBaseline="@+id/loss"
-        android:layout_marginLeft="60dp"
+        android:layout_alignBottom="@+id/fatigue"
         android:padding="20dp"
         android:textSize="20sp"
         />
