functionality finished, styling needed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:layout_centerHorizontal="true"
             android:layout_alignLeft="@id/start_now"
             android:background="@drawable/fui_ic_mail_white_24dp"
+            android:onClick="shareTextClick"
             />
 
         <Button
